[tool.poetry]
name = "example"
version = "0.1.0"
description = "example project"
authors = ["Patrick Murray <pdmurray@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
pydantic = "^2.10.0"
lancedb = "^0.16.0"
ollama = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
